# LumiCode

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
arduino/lumicode/: lumicode.ino
arduino/pinsTest/: pinsTest.ino
scripts/: claude-hook.sh
src/: App.css  App.tsx  constants.ts  main.tsx  sounds.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hooks.rs  lib.rs  main.rs  serial.rs  server.rs  updates.rs  webhooks.rs
src/components/: AboutPage.tsx  ErrorBoundary.tsx  EventLog.tsx  Header.tsx  HookDiffModal.tsx  OnboardingWizard.tsx  SerialPorts.tsx  SessionStats.tsx  SettingsPage.tsx  StatusBar.tsx  TabBar.tsx  TestLed.tsx  Toast.tsx
