[package]
name = "lumicode"
version = "1.8.0"
edition = "2021"

[lib]
name = "lumicode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serialport = "4"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = "0.4"
